--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
     "reset": "sh script/updateVersion.sh 0.0.0 && yarn unPublish"
   },
   "dependencies": {
-    "tjh-ui": "^0.0.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-vue": "^2.0.0",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
