--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "license": "ISC",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ",
     "build": "rimraf lib && rollup -c build/rollup.lib.js",
     "Publish": "yarn build && sh script/updateVersion.sh && npm publish --registry=http://localhost:4873",
     "unPublish": "npm unpublish tjh-ui --force --registry=http://localhost:4873",
-    "PublishNpm": "yarn build && sh script/updateVersion.sh && npm publish --registry=https://registry.npmjs.org/",
-    "unPublishNpm": "npm unpublish tjh-ui --force --registry=http://registry.npmjs.org/",
-    "reset": "sh script/updateVersion.sh 0.0.0 && yarn unPublish"
+    "PublishNpm": "yarn build && sh script/updateVersion.sh && npm publish --registry=https://registry.npmjs.org",
+    "unPublishNpm": "npm unpublish tjh-ui --force --registry=https://registry.npmjs.org",
+    "reset": "sh script/updateVersion.sh 0.0.0 && yarn unPublish",
+    "eslint": "eslint --fix --ext .js,.vue ./packages ./build ./*.*.js ./*.js ./.*.js src"
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -26,10 +27,15 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-vue": "^2.0.0",
-    "path": "^0.12.7",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.3.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
