--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "license": "ISC",
   "scripts": {
-    "dev": "vite ",
+    "dev": "vite",
     "build": "rimraf lib && rollup -c build/rollup.lib.js",
     "Publish": "yarn build && sh script/updateVersion.sh && npm publish --registry=http://localhost:4873",
     "unPublish": "npm unpublish tjh-ui --force --registry=http://localhost:4873",
     "PublishNpm": "yarn build && sh script/updateVersion.sh && npm publish --registry=https://registry.npmjs.org",
     "unPublishNpm": "npm unpublish tjh-ui --force --registry=https://registry.npmjs.org",
     "reset": "sh script/updateVersion.sh 0.0.0 && yarn unPublish",
-    "eslint": "eslint --fix --ext .js,.vue ./packages ./build ./*.*.js ./*.js ./.*.js src"
+    "eslint": "eslint --fix --ext .js,.vue ./packages ./build ./*.*.js ./*.js ./.*.js src",
+    "stylelint": "stylelint packages/**/*.{vue,css,sass,scss}",
+    "prettier": "prettier --check ."
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -27,7 +29,6 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-vue": "^2.0.0",
@@ -35,6 +36,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.1.0",
+    "husky": "^7.0.4",
+    "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.2",
@@ -42,6 +45,10 @@
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.49.0",
     "scss-loader": "^0.0.1",
+    "stylelint": "^14.3.0",
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-scss": "^4.1.0",
     "vite": "^2.7.2"
   }
 }
