--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
+    "test": "jest --coverage",
     "build": "rimraf lib && rollup -c build/rollup.lib.js",
     "Publish": "yarn build && sh script/updateVersion.sh && npm publish --registry=http://localhost:4873",
     "unPublish": "npm unpublish tjh-ui --force --registry=http://localhost:4873",
@@ -30,15 +31,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.5.0",
     "eslint": "7.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^12.3.1",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
@@ -55,9 +63,11 @@
     "vite": "^2.7.2"
   },
   "lint-staged": {
+    "{build,packages,src}/*.{css, scss}": [
+      "stylelint"
+    ],
     "{build,packages,src}/*.{js, vue, css, scss}": [
       "eslint --fix",
-      "stylelint",
       "prettier --write",
       "git add"
     ]
