--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/jest": "^27.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
     "babel-core": "^7.0.0-bridge.0",
@@ -54,6 +57,7 @@
     "rimraf": "^3.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.49.0",
     "scss-loader": "^0.0.1",
@@ -61,6 +65,9 @@
     "stylelint-config-html": "^1.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "^4.1.0",
+    "ts-jest": "^27.1.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5",
     "vite": "^2.7.2"
   },
   "lint-staged": {
