fix(package.json): 新增script: <"prepare": "husky install">

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "stylelint:check": "stylelint packages/**/*.{vue,css,sass,scss}",
     "prettier:fix": "prettier --write .",
     "lint-staged": "lint-staged",
-    "husky:create-command": "husky add .husky/pre-commit 'your command'"
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.25"
