--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a vue3 component storage.",
   "main": "./lib/index.umd.js",
   "module": "./lib/index.es.js",
+  "packageManager": "yarn@1.22.11",
   "author": {
     "email": "tjhaaa@163.com",
     "name": "tangjiahui",
@@ -16,11 +17,11 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "build": "rimraf lib && rollup -c build/rollup.lib.js",
-    "Publish": "yarn build && sh script/updateVersion.sh && npm publish --registry=http://localhost:4873",
+    "Publish": "npm run build && sh script/updateVersion.sh && npm publish --registry=http://localhost:4873",
     "unPublish": "npm unpublish tjh-ui --force --registry=http://localhost:4873",
-    "PublishNpm": "yarn build && sh script/updateVersion.sh && npm publish --registry=https://registry.npmjs.org",
+    "PublishNpm": "npm run build && sh script/updateVersion.sh && npm publish --registry=https://registry.npmjs.org",
     "unPublishNpm": "npm unpublish tjh-ui --force --registry=https://registry.npmjs.org",
-    "reset": "sh script/updateVersion.sh 0.0.0 && yarn unPublish",
+    "reset": "sh script/updateVersion.sh 0.0.0 && npm run unPublish",
     "eslint:fix": "eslint --fix --ext .ts,.js,.vue ./packages ./build ./*.*.js ./*.js ./.*.js src",
     "prettier:fix": "prettier --write .",
     "lint-staged": "lint-staged",
