add(vue-router): 使用vue-router管理组件展示页面

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
